# toolbox

./: .env.example  .gitignore  CLAUDE.md  DEPENDENCIES.md  README.md  SIGNING.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
e2e/: aspect-ratio.spec.ts  barcode-gen.spec.ts  base64.spec.ts  color-palette.spec.ts  favicon-gen.spec.ts  home.spec.ts  image-crop.spec.ts  image-rotate.spec.ts  image-watermark.spec.ts  json-formatter.spec.ts  markdown-pdf.spec.ts  navigation.spec.ts  password-checker.spec.ts  pdf-watermark.spec.ts  placeholder-image.spec.ts  screen-ruler.spec.ts  text-tools.spec.ts  theme.spec.ts  timestamp.spec.ts  unit-converter.spec.ts  url-encoder.spec.ts  uuid-generator.spec.ts  word-counter.spec.ts  zip-tool.spec.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: crypto.rs  file_ops.rs  image_ops.rs  keychain.rs  mod.rs  preferences.rs  system.rs
src-tauri/src/security/: input_validation.rs  mod.rs  rate_limiter.rs
src-tauri/src/storage/: history.rs  mod.rs  preferences.rs
src/app/: CommandPalette.tsx  Layout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/: UpdateBanner.tsx
src/hooks/: useClipboard.ts  useDebounce.ts  useFileDropzone.ts  useKeyboardShortcut.ts  usePreferences.ts  useToolHistory.ts
src/lib/: accents.ts  constants.ts  icons.ts  security.ts  (+2 more)
(+166 files in other folders)
